# Crypto-assets-logistics

./: .gitignore  LICENSE  package-lock.json  package.json  tailwind.config.ts
smart_contracts/: Cargo.toml
smart_contracts/contracts/portfolio_tracker/: benchmark_portfolio_tracker.cairo  i_portfolio_tracker.cairo  portfolio_tracker.cairo  test_portfolio_tracker.cairo
smart_contracts/contracts/production-step-management/: Cargo.toml  README.md
smart_contracts/contracts/registrar/: Cargo.toml
smart_contracts/contracts/supplyChainMetrics/: Cargo.toml  README.md  build.bat  build.sh  build_and_test.bat  build_and_test.sh  run_soroban_tests_all.bat  run_soroban_tests_all.sh
smart_contracts/contracts/supplyChainMetrics/src/: lib.rs  test.rs
smart_contracts/contracts/supplyChainMetrics/test_snapshots/test/: test_get_all_metrics.1.json  test_get_specific_metric.1.json  test_increment_transactions.1.json  test_initialize_contract.1.json  test_large_number_of_transactions.1.json  test_multiple_metric_updates.1.json  test_unauthorized_increment_transactions.1.json  test_update_inventory_value.1.json  test_update_inventory_value_negative.1.json  test_update_on_time_delivery.1.json  test_update_on_time_delivery_boundary_values.1.json  test_update_production_efficiency.1.json  test_update_production_efficiency_boundary_values.1.json
src/app/: globals.css  globals_light.css  layout.tsx
src/app/analytics/: page.tsx
src/app/blockchain/: page.tsx
src/app/blockchain-transactions/: page.tsx
src/components/: GoogleAnalytics.tsx  app-sidebar.tsx
(+109 files in other folders)
