[package]
name = "supplyChainMetrics"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

# This makes the package independent of the parent workspace
[workspace]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "22.0.0"

[dependencies]
soroban-sdk = { version = "22.0.0" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4", "serde", "js"] }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
tokio = { version = "1", features = ["full"] }
